--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ requires-python = ">=3.11"
 dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "googlemaps (>=4.10.0,<5.0.0)"
+    "googlemaps (>=4.10.0,<5.0.0)",
+    "mysql-connector-python (>=9.2.0,<10.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "folium (>=0.19.5,<0.20.0)",
 ]
 
 
