--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# test integration phase will make a new python file that we can just delete
+src/test_integrated.py
