--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Daniel James",email = "156598376+danieljamesMitb@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4"
 dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
@@ -15,6 +15,7 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "folium (>=0.19.5,<0.20.0)",
+    "pymoo (>=0.6.1.3,<0.7.0.0)",
 ]
 
 
