--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,7 @@ cython_debug/
 # test integration phase will make a new python file that we can just delete
 src/test_integrated.py
 notebooks/*.txt
+.DS_Store
+.python-version
+.vscode
+cache/
