--- a/src/alns_itinerary/config.json
+++ b/src/alns_itinerary/config.json
@@ -1,11 +1,31 @@
 {
-    "NUM_DAYS": 3,
     "MAX_ATTRACTION_PER_DAY": 4,
-    "HOTEL_COST": 50,
+    "RICH_THRESHOLD": 100,
+    "MEAL_BUFFER_TIME": 150,
+    "AVG_HAWKER_COST": 15,
     "START_TIME": 540,
     "HARD_LIMIT_END_TIME": 1320,
     "LUNCH_START": 660,
     "LUNCH_END": 900,
     "DINNER_START": 1020,
-    "DINNER_END": 1260
-  }
+    "DINNER_END": 1260,
+    "HAWKER_TIME_SPENT": 60,
+    "MAX_ITERATIONS": 5000,
+    "SEGMENT_SIZE": 100,
+    "TIME_LIMIT": 3600,
+    "EARLY_TERMINATION_ITERATIONS": 1000,
+    "WEIGHTS_DESTROY": [1.0, 1.0, 1.0, 1.0, 1.0],
+    "WEIGHTS_REPAIR": [1.0, 1.0, 1.0],
+    "OBJECTIVE_WEIGHTS": [0.3, 0.3, 0.4],
+    "WEIGHTS_SCORES": [3, 2, 1, 0],
+    "INFEASIBLE_PENALTY": 10,
+    "DESTROY_REMOVE_PERCENTAGE": 0.3,
+    "RATING_MAX": 10,
+    "APPROX_HOTEL_TRAVEL_COST": 10,
+    "DESTROY_DISTANT_LOC_WEIGHTS": [0.7, 0.3],
+    "DESTROY_DISTANT_LOC_PERCENTAGE": 0.3,
+    "DESTROY_EXPENSIVE_THRESHOLD": 0.9,
+    "DESTROY_DAY_HAWKER_PRESERVE": 0.7,
+    "REPAIR_TRANSIT_WEIGHTS": [0.4, 0.6],
+    "REPAIR_SATISFACTION_WEIGHTS": [0.3, 0.7]
+}
