--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "folium (>=0.19.5,<0.20.0)",
     "pymoo (>=0.6.1.3,<0.7.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 
