--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "folium (>=0.19.5,<0.20.0)",
     "pymoo (>=0.6.1.3,<0.7.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
+    "langchain (>=0.3.21,<0.4.0)",
+    "agno (>=1.2.4,<2.0.0)",
+    "openai (>=1.68.2,<2.0.0)",
+    "langchain-groq (>=0.3.1,<0.4.0)",
 ]
 
 
