--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ dependencies = [
     "agno (>=1.2.4,<2.0.0)",
     "openai (>=1.68.2,<2.0.0)",
     "langchain-groq (>=0.3.1,<0.4.0)",
+    "pypdf (>=5.4.0,<6.0.0)",
+    "chromadb (>=0.6.3,<0.7.0)",
+    "duckduckgo-search (>=7.5.4,<8.0.0)",
+    "googlesearch-python (>=1.3.0,<2.0.0)",
+    "pycountry (>=24.6.1,<25.0.0)",
+    "pgvector (>=0.4.0,<0.5.0)",
 ]
 
 
