--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ dependencies = [
     "googlesearch-python (>=1.3.0,<2.0.0)",
     "pycountry (>=24.6.1,<25.0.0)",
     "pgvector (>=0.4.0,<0.5.0)",
+    "streamlit (>=1.44.0,<2.0.0)",
+    "osmnx (>=2.0.2,<3.0.0)",
+    "networkx (>=3.4.2,<4.0.0)",
+    "streamlit-folium (>=0.24.0,<0.25.0)",
 ]
 
 
