Updated Code Agent

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,7 @@ cython_debug/
 
 # test integration phase will make a new python file that we can just delete
 src/test_integrated.py
+src/alns_itinerary/integrated_vrp_solution.py
 notebooks/*.txt
 .DS_Store
 .python-version
