--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "osmnx (>=2.0.2,<3.0.0)",
     "networkx (>=3.4.2,<4.0.0)",
     "streamlit-folium (>=0.24.0,<0.25.0)",
+    "psycopg[binary,pool] (>=3.2.6,<4.0.0)",
 ]
 
 
