--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ streamlit>=1.44.0,<2.0.0
 osmnx>=2.0.2,<3.0.0
 networkx>=3.4.2,<4.0.0
 streamlit-folium>=0.24.0,<0.25.0
+psycopg[binary,pool]>=3.2.6,<4.0.0
