Added config variables for objective function limits

--- a/src/alns_itinerary/config.json
+++ b/src/alns_itinerary/config.json
@@ -27,5 +27,9 @@
     "DESTROY_EXPENSIVE_THRESHOLD": 0.9,
     "DESTROY_DAY_HAWKER_PRESERVE": 0.7,
     "REPAIR_TRANSIT_WEIGHTS": [0.7, 0.3],
-    "REPAIR_SATISFACTION_WEIGHTS": [0.3, 0.7]
+    "REPAIR_SATISFACTION_WEIGHTS": [0.3, 0.7],
+    "BUDGET_OBJECTIVE_LIMIT": 0.7,
+    "TRAVEL_TIME_OBJECTIVE_LIMIT": 0.3,
+    "SATISFACTION_OBJECTIVE_LIMIT": 1.0,
+    "TRAVEL_TIME_REFERENCE": 480
 }
