Added Affected POI Agent

--- a/.gitignore
+++ b/.gitignore
@@ -189,6 +189,8 @@ cache/
 
 # llm generated output no need to be pushed
 data/alns_inputs/*.json
+results/initial_itinerary_*.json
+results/best_itinerary_*.json
 
 # papers
 paper/*.aux
